<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stormy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again</string>
    <string name="ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is unavailable!</string>
    <string name="title_activity_daily_weather">DailyWeatherActivity</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="no_daily_forecast_data">There is no data to display</string>
    <string name="title_activity_hourly_forecast">HourlyForecast</string>
    <string name="blank_temperature_label">--</string>
    <string name="degree_symbol_image_content_desc">degree symbol ImageView</string>
    <string name="blank_timelabel_label">...</string>
    <string name="blank_location_label">Getting Location</string>
    <string name="weather_icon_content_desc">Weather condition icon</string>
    <string name="sunrise_label_text">Sunrise</string>
    <string name="sunset_label_text">Sunset</string>

</resources>
