<android.support.v4.widget.SwipeRefreshLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/swipeRefreshLayout"
    tools:context=".MyActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:id="@+id/baseRelativeLayout"
        android:background="@drawable/bg_gradient">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100"
                android:text="@string/blank_temperature_label"
                android:id="@+id/temperatureLabel"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="75sp"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/degreeImageView"
                android:layout_alignTop="@+id/temperatureLabel"
                android:layout_toRightOf="@+id/temperatureLabel"
                android:layout_toEndOf="@+id/temperatureLabel"
                android:src="@drawable/degree"
                android:paddingTop="50dp"
                android:contentDescription="@string/degree_symbol_image_content_desc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="At 5:27 it will be"
                android:text="@string/blank_timelabel_label"
                android:id="@+id/timeLabel"
                android:layout_above="@+id/temperatureLabel"
                android:layout_centerHorizontal="true"
                android:textColor="#80ffffff"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:singleLine="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Austin, TX"
                android:text="@string/blank_location_label"
                android:id="@+id/locationLabel"
                android:layout_above="@+id/timeLabel"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:paddingBottom="50dp"
                android:gravity="center_horizontal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iconImageView"
                android:layout_alignTop="@+id/locationLabel"
                android:layout_toLeftOf="@+id/locationLabel"
                android:layout_toStartOf="@+id/locationLabel"
                android:paddingRight="40dp"
                android:src="@drawable/rain"
                android:contentDescription="@string/weather_icon_content_desc" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/temperatureLabel"
                android:layout_centerHorizontal="true"
                android:weightSum="100"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HUMIDITY"
                        android:id="@+id/humidityLabel"
                        android:textColor="#80FFFFFF"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="--"
                        android:id="@+id/humidityValue"
                        android:textSize="18dp"
                        android:textColor="#ffffffff"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="RAIN/SNOW?"
                        android:id="@+id/precipLabel"
                        android:textColor="#80FFFFFF"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="--%"
                        android:id="@+id/precipValue"
                        android:textColor="#ffffffff"
                        android:textSize="18dp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Stormy with a chance of meatballs"
                android:text="Getting current weather information"
                android:id="@+id/summaryLabel"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_above="@+id/buttonLinearLayout"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/buttonLinearLayout">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="HOURLY"
                android:id="@+id/hourlyButton"
                android:layout_weight="1"
                android:background="#40ffffff"
                android:textColor="#ffffffff"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="7 Day"
                android:id="@+id/dailyButton"
                android:layout_weight="1"
                android:background="#40ffffff"
                android:textColor="#ffffffff"
                android:layout_marginLeft="2dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="6:42 AM"
            android:textSize="18sp"
            android:id="@+id/sunriseTextView"
            android:layout_below="@+id/sunriseLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise_label_text"
            android:id="@+id/sunriseLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:labelFor="@id/sunriseTextView"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset_label_text"
            android:id="@+id/sunsetLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            android:labelFor="@id/sunriseTextView"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="9:01 PM"
            android:textSize="18sp"
            android:id="@+id/sunsetTextView"
            android:layout_below="@+id/sunsetLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            />

    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>